Angular 1.5 setup finalised

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="graph">
   <head>
     <title>
       Graph
@@ -8,8 +8,6 @@
     <script type="text/javascript" src="dist/graph.js"></script>
   </head>
   <body>
-    <div id="container">
-      <p>what is your name?</p>
-    </div>
+    <graph-app-container></graph-app-container>
   </body>
 </html>
